# wedding-invitation

./: .env.dev  .env_db.dev  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/static/: theme-custom.css
app/static/scripts/: script.js
app/static/scripts/widgets/: loading.js
app/static/styles/: style.css
app/templates/: index.html
nginx/: Dockerfile  nginx.conf
project/: settings.py
wedding_invitation/: Dockerfile  Dockerfile.prod  requirements.txt
wedding_invitation/app/: models.py  urls.py  views.py
wedding_invitation/app/migrations/: 0001_initial.py
wedding_invitation/app/static/: theme-custom.css
wedding_invitation/app/static/bower_components/countdown/: countdown.css  countdown.js
wedding_invitation/app/static/customize/: customize.html
wedding_invitation/app/static/images/: bg-countdown - Copy.jpg-autosave.kra  bg-countdown - Copy.jpg~  bg-countdown.jpg~
wedding_invitation/app/static/scripts/: script-bundle.js  scroll.js
wedding_invitation/app/static/scripts/app/: themes.js
wedding_invitation/app/static/scripts/tools/: tools.js
wedding_invitation/app/static/scripts/widgets/: video-bg.js  vimeo-bg.js  youtube-bg.js
wedding_invitation/app/static/styles/: fonts-vars.less  home.less  style.css  style.less  style.min.css
wedding_invitation/app/static/styles/themes/: theme-lynda.css  theme-wedding.css  theme-wedding.less
wedding_invitation/app/templates/: index.html
wedding_invitation/project/: settings.py
