[tool.poetry]
name = "wedding-invitation"
version = "0.1.0"
description = "A digital wedding invitation website."
authors = ["Wizdan M. G. S. <wizdanshodri@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
